--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
         <section class="about-text">
      
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
+            My job is to build your website so that it is functional and user-friendly and simultaneously attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
+            add a personal touch to your product and make sure that it is eye-catching and easy to use. I aim to bring
             across your
             message and identity in the most creative way.
           </p>
@@ -192,7 +192,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="icon-design.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -200,7 +200,7 @@
                 <h4 class="h4 service-item-title">UX/UI design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  The most modern and high-quality design is made at a professional level.
                 </p>
               </div>
 
@@ -209,7 +209,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -225,7 +225,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -278,7 +278,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Working with Melvin on the project was a fantastic experience. Your frontend design was clean, responsive, and user-friendly, making everything come together beautifully. Your attention to detail and collaborative approach made the process seamless and enjoyable.
+                    Working with Melvin on the project was a fantastic experience. Your front-end design was clean, responsive, and user-friendly, making everything come together beautifully. Your attention to detail and collaborative approach made the process seamless and enjoyable.
                   </p>
                 </div>
 
@@ -709,7 +709,7 @@
   <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
 
   <!--
     - ionicon link
