--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="my-avatar.png" alt="Melvin Manzi" width="80">
+          <img src="melvin.png" alt="Melvin Manzi" width="80">
         </figure>
 
         <div class="info-content">
